<resources>
    <string name="app_name">EasyTour</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="become_a_tourist">I want to be a tourist</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main2">Recommend</string>
    <string name="private_setting">Setting</string>

    <string name="become_a_guider">I want to be a Guider</string>
    <string name="UserName_Setting">UserName</string>
    <string name="PhoneNum_Setting">Phone</string>
    <string name="Location_Setting">Location</string>
    <string name="Description_Setting">Introduce</string>
    <string name="Update_Setting">Update</string>
    <string name="AcceptOrder_GuiderMain">Accept Order</string>
    <string name="Customer_NUM_GuiderMain">Customer NUM：</string>
    <string name="Description">Description</string>
    <string name="End_Date_GuiderMain">018-03-01</string>
    <string name="StartDate_GuiderMain">2018-03-01</string>
    <string name="Time_GuiderMain">Time：</string>
    <string name="Location_GuiderMain">Location:</string>
    <string name="OrderNUM_GuiderMain">OrderID：</string>
    <string name="UserName_GuiderMain">UserName</string>
    <string name="SendOrder_TouristMain">SendOrder</string>
    <string name="Tourist_Login">Tourist</string>
    <string name="Guider_Login">Guide</string>
    <string name="SingUp_Login">Sing Up</string>
    <string name="SingIn_Login">Sing In</string>
    <string name="SingUpInformation">Information</string>
    <string name="password">PassWord</string>
    <string name="confirm_password">Confirm PassWord</string>
    <string name="real_name">Real Name</string>
    <string name="id_number">ID Number</string>
    <string name="Order_Status">Status:</string>
    <string name="guider_market">Market</string>
    <string name="send_order_location">Location</string>
    <string name="send_order_start">Start</string>
    <string name="send_order_end">End</string>
    <string name="send_order_people">People</string>
    <string name="menu_orders">Orders</string>
    <string name="menu_release_order">Release Order</string>
    <string name="menu_message">Message</string>
    <string name="menu_setting">Setting</string>
    <string name="menu_exit">Exit</string>
    <string name="menu_market">Market</string>
    <string name="notifyTitle">notice</string>
    <string name="notifyMsg">need permission</string>
    <string name="cancel">cancel</string>
    <string name="setting">setting</string>
    <string name="order_detail_id">Order ID</string>
    <string name="oreder_detail_tourist_name">Tourist name</string>
    <string name="order_detail_place">Place</string>
    <string name="order_detail_start_date">Start date</string>
    <string name="order_detail_end_date">End date</string>
    <string name="order_detail_place_instruction">Place Instruction</string>
    <string name="order_detai_time_instruction">Time Instruction</string>
    <string name="order_details">Order Details</string>
    <string name="order_detail_number_od_people">Number of people</string>
    <string name="order_detail_finished">Finished</string>

    <string name="order_order_title">Order</string>
    <!--下拉刷新-->
    <string name="pull_to_refresh">pull to refresh</string>
    <string name="release_to_refresh">release to refresh</string>
    <string name="refreshing">refreshing...</string>
    <string name="not_updated_yet">not updated yet</string>
    <string name="updated_at">updated_at %1$s</string>
    <string name="updated_just_now">updated just now</string>
    <string name="time_error">time error</string>
    <string name="tourist_setting">Setting</string>
    <string name="please_click_to_select_the_city">Please click to select the city</string>
    <string name="click_here_to_choose">click here to choose</string>
    <string name="welcome">We\'ll make your love travel</string>

    <!--pickview-->
    <string name="pickerview_cancel">取消</string>
    <string name="pickerview_submit">确定</string>
    <string name="pickerview_year">年</string>
    <string name="pickerview_month">月</string>
    <string name="pickerview_day">日</string>
    <string name="pickerview_hours">时</string>
    <string name="pickerview_minutes">分</string>
    <string name="pickerview_seconds">秒</string>
    <string name="bt_finished">Finished</string>
    <string name="guide_unfinished_orders">Unfinished Orders</string>
    <string name="guide_finished_name">Guide name</string>
    <string name="guide_finished_orders">Finished Orders</string>
    <string name="tourist_unfinished_processing">Processing...</string>

</resources>
