<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/lobby"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_market" />
        <item
            android:id="@+id/order"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_orders" />
        <item
            android:id="@+id/message"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_message" />
        <item
            android:id="@+id/setting"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_setting" />
        <item
            android:id="@+id/quite"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/menu_exit"
            />
    </group>

</menu>
