<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OrderActivity"
    android:orientation="vertical"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorLightBlueBar"
        android:orientation="horizontal"
        >
        <ImageButton
            android:id="@+id/order_user_iocn"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/ic_launcher_foreground"
            android:onClick="btnOrdersInformation"/>
        <TextView
            android:id="@+id/order_user_username"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/UserName_GuiderMain"
            android:textSize="25sp"
            android:gravity="center|left"
            android:ellipsize="end"
            android:singleLine="true"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/OrderNUM_GuiderMain"
            android:textSize="20sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="ordernum"
            android:textSize="20sp"
            android:scrollbars="vertical"/>
    </LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="5dp">
    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Location_GuiderMain"
        android:textSize="20sp"/>
    <TextView
        android:id="@+id/order_tv_localdes"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text="@string/Description"
        android:textSize="20sp"
        android:scrollbars="vertical"/>

</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Time_GuiderMain"
            android:textSize="20sp"/>
        <RelativeLayout
            android:id="@+id/order_time_table"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:id="@+id/order_tv_Starttime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/StartDate_GuiderMain"
                android:layout_alignParentLeft="true"
                android:textSize="20sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="to"

                android:textSize="20sp"/>
            <TextView
                android:id="@+id/order_tv_Endtime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/End_Date_GuiderMain"
                android:layout_alignParentRight="true"
                android:textSize="20sp"/>
        </RelativeLayout>
<TextView
    android:id="@+id/order_tv_timedes"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:text="@string/Description"
    android:textSize="20sp"
    android:scrollbars="vertical"
    />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/Customer_NUM_GuiderMain"
            />
        <TextView
            android:id="@+id/order_tv_customernum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="3"
            android:textSize="20sp"/>
    </LinearLayout>
    <Button
        android:id="@+id/order_btn_resive"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_selector"
        android:textSize="25sp"
        android:text="@string/TalkOrder_GuiderMain"
        android:textColor="@color/colorTextColor"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:onClick="btnResiveOrder"/>
</LinearLayout>