<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:weightSum="5"
    tools:context=".register.Register">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@color/colorLightBlueBar">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_order_title"
            android:textSize="35sp"
            android:textColor="@color/colorGray"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">
        <Button
            android:id="@+id/btn_become_tourist"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_weight="2"
            android:gravity="center"
            android:textAllCaps="true"
            android:layout_marginTop="20dp"
            android:text="@string/become_a_tourist"
            android:background="@color/colorButton1"/>

        <Button
            android:layout_marginTop="10dp"
            android:id="@+id/btn_become_guider"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_weight="2"
            android:textAllCaps="true"
            android:text="@string/become_a_guider"
            android:background="@color/colorButton2"
            />
    </LinearLayout>




</LinearLayout>