<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".orders.OrderDetailActivity"
>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@color/colorLightBlueBar">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_order_title"
            android:textSize="35sp"
            android:textColor="@color/colorGray"/>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/OrderNUM_GuiderMain"
                    android:textSize="25sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:scrollbars="vertical"
                    android:text="ordernum"
                    android:textSize="25sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Order_Status"
                    android:textSize="25sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_weight="1"
                    android:scrollbars="vertical"
                    android:text="statuse"
                    android:textSize="25sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:gravity="center|left"
                    android:singleLine="true"
                    android:text="User Name:"
                    android:textSize="25sp"

                    />

                <TextView
                    android:id="@+id/orderdetail_user_username"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:gravity="center|left"
                    android:singleLine="true"
                    android:text="@string/UserName_GuiderMain"
                    android:textSize="25sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:gravity="center|left"
                    android:singleLine="true"
                    android:text="Guide Name:"
                    android:textSize="25sp"

                    />

                <TextView
                    android:id="@+id/orderdetail_guide_guidename"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:gravity="center|left"
                    android:singleLine="true"
                    android:text="GuideName"
                    android:textSize="25sp" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Location_GuiderMain"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/order_tv_localdes"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:scrollbars="vertical"
                    android:text="@string/Description"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Time_GuiderMain"
                    android:textSize="25sp" />

                <RelativeLayout
                    android:id="@+id/order_time_table"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/order_tv_Starttime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:text="@string/StartDate_GuiderMain"
                        android:textSize="20sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:text="to"

                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/order_tv_Endtime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:text="@string/End_Date_GuiderMain"
                        android:textSize="20sp" />
                </RelativeLayout>

                <TextView
                    android:id="@+id/order_tv_timedes"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:scrollbars="vertical"
                    android:text="@string/Description"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Customer_NUM_GuiderMain"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/order_tv_customernum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="3"
                    android:textSize="25sp" />

            </LinearLayout>
            <Button
                android:id="@+id/btn_order_detail_communicate"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/button_selector"
                android:onClick="btn_order_detail_communicateClick"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:text="connect"
                android:textSize="25sp"
                android:textColor="@color/colorTextColor"
                />
        </LinearLayout>
    </ScrollView>




</LinearLayout>