<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <ImageView
                android:id="@+id/iv_order_detail_img"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:src="@drawable/logotemp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="20dp"
                android:paddingRight="20dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/order_detail_id"
                    android:textColor="@color/dimgray"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tv_order_detail_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="11223344"
                    android:textColor="@color/colorBlack"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:paddingLeft="20dp"
                android:paddingRight="20dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/oreder_detail_tourist_name"
                    android:textColor="@color/dimgray"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tv_order_detail_tourist_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="11111111"
                    android:textColor="@color/colorBlack"
                    android:textSize="20sp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:paddingLeft="20dp"
                android:paddingRight="20dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/guide_finished_name"
                    android:textColor="@color/dimgray"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tv_order_detail_guider_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="11111111"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    />
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="25dp"
                    android:src="@drawable/message"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:paddingLeft="20dp"
                android:paddingRight="20dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/order_detail_place"
                    android:textColor="@color/dimgray"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tv_order_detail_place"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="11111111"

                    android:textColor="@color/colorBlack"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:paddingLeft="20dp"
                android:paddingRight="20dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/order_detail_start_date"
                    android:textColor="@color/dimgray"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tv_order_detail_start_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="11111111"
                    android:textColor="@color/colorBlack"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:paddingLeft="20dp"
                android:paddingRight="20dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/order_detail_end_date"
                    android:textColor="@color/dimgray"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tv_order_detail_end_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="11111111"
                    android:textColor="@color/colorBlack"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:paddingLeft="20dp"
                android:paddingRight="20dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/order_detail_number_od_people"
                    android:textColor="@color/dimgray"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tv_order_detail_number_of_people"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="11111111"
                    android:textColor="@color/colorBlack"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                android:paddingLeft="20dp"
                android:paddingRight="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/order_detail_place_instruction"
                    android:textColor="@color/dimgray"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tv_order_detail_place_instruction"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="11111111"
                    android:textColor="@color/colorBlack"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                android:paddingLeft="20dp"
                android:paddingRight="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/order_detai_time_instruction"
                    android:textColor="@color/dimgray"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tv_order_detail_time_instruction"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="11111111"
                    android:textColor="@color/colorBlack"
                    android:textSize="20sp" />
            </LinearLayout>

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="30dp"
                android:textSize="20sp"
                android:gravity="center"
                android:text="@string/tourist_unfinished_processing"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
